projeto quase ok

--- a/src/main/resources/META-INF/resources/layout/footerLayout.xhtml
+++ b/src/main/resources/META-INF/resources/layout/footerLayout.xhtml
@@ -12,7 +12,7 @@
         <h:form id="themeForm">
             <h:outputLink value="#{environment.getProperty('info.url')}" target="_blank">
                 <h:outputText styleClass="copyright"
-                              value="&copy;&nbsp;&nbsp;2016 &nbsp;&bull;&nbsp; IFRN/CNAT/DIATINF &nbsp;&bull;&nbsp; Versão #{environment.getProperty('info.version')}" />
+                              value="&copy;&nbsp;&nbsp;2016 &nbsp;&bull;&nbsp; IFRN/CNAT/DIATINF &nbsp;&bull;&nbsp; Versão 1.0" />
             </h:outputLink>
         </h:form>
     </div>
