--- a/src/main/resources/META-INF/resources/layout/menu.xhtml
+++ b/src/main/resources/META-INF/resources/layout/menu.xhtml
@@ -6,6 +6,8 @@
     <p:menubar>
         <p:menuitem value="Usuário" url="/usuario.jsf" />
         <p:menuitem value="Projeto" url="/projeto.jsf" />
-        <p:menuitem value="Atividades" url="/atividade.jsf" />
+        <p:menuitem value="Tarefa" url="/tarefa.jsf" />
+        <p:menuitem value="Atividade" url="/atividade.jsf" />
+        <p:menuitem value="Intervalo" url="/intervalo.jsf" />
     </p:menubar>
 </ui:composition>
