--- a/src/main/resources/META-INF/resources/layout/template.xhtml
+++ b/src/main/resources/META-INF/resources/layout/template.xhtml
@@ -3,7 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      >
 
     <f:view contentType="text/html">
 
@@ -12,8 +13,6 @@
         </h:head>
 
         <h:body>            
-            <ui:include src="headerLayout.xhtml" />
-
             <ui:include src="menuLayout.xhtml" />
 
             <ui:include src="contentLayout.xhtml" />
