--- a/src/main/resources/META-INF/resources/layout/headLayout.xhtml
+++ b/src/main/resources/META-INF/resources/layout/headLayout.xhtml
@@ -11,7 +11,7 @@
     <title>#{environment.getProperty('server.display-name')}</title>
     <meta content='text/html; charset=UTF-8' http-equiv="Content-Type" />
     
-
+    <h:outputStylesheet library="css" name="corrigirBug.css" />
     <h:outputStylesheet library="css" name="sistema.css" />
     <h:outputScript library="js" name="sistema.js" />
     <h:outputScript library="js" name="maskMoney.js" />
