--- a/src/main/resources/META-INF/resources/layout/menu.xhtml
+++ b/src/main/resources/META-INF/resources/layout/menu.xhtml
@@ -5,7 +5,7 @@
       xmlns:b="http://bootsfaces.net/ui"
       xmlns:p="http://primefaces.org/ui">
     
-    <b:navBar brand="ToDo" brandHref="/usuario.jsf" inverse="true">
+    <b:navBar brand="TODO" brandHref="/usuario.jsf" >
     <b:navbarLinks>
         <b:navLink value="Usuário" href="/usuario.jsf"></b:navLink>
         <b:navLink value="Projeto" href="/projeto.jsf"></b:navLink>
